styles/common-template.css
/* ... */
.outer {border-style:solid; border-width: 1px; border-color:#666666 #666666 #666666 #666666;}
.inner {border-style:solid; border-width: 1px; border-color:#F9F8F7 #F9F8F7 #F9F8F7 #F9F8F7;}

.closePopup {background-color: #0055e6; padding-right: 3px; padding-top: 3px; padding-bottom: 3px; text-align: right}


/*********** moved from tree.css ***********/
.dtree {
	white-space: nowrap;
/*	color: &[ToolbarColor];; */
}
.dtree img {
	border: 0px;
	vertical-align: middle;
}
/*
.dtree a {
	color: #333;
	text-decoration: none;
}
*/
.dtree a.node, .dtree a.nodeSel {
	white-space: nowrap;
	padding: 1px 2px 1px 2px;
}
.dtree a.node:hover, .dtree a.nodeSel:hover {
	color: #333;
	text-decoration: underline;
}
.dtree a.nodeSel {
	background-color: #c0d2ec;
}
.dtree td {
	font-size: 11px;
	color: #666;
}
.dtree th {
	background-color: #E2E8DF;
	font-size: 11px;
	color: #666;
}


.br {
  height: 5px;
}
.li {  /* for Bar Retail page */
  height: 50px;
}

.dcol {
  min-width: 20em;
}
/***************************************************************/
.h21 {height: 1em}

.tag {
  background: url(../images/tag.gif) left center no-repeat;
  border-right: 1px solid #c2c1c1;
  padding-top: 2px;
  padding-right: 5px;
  padding-bottom: 2px;
  padding-left: 15px;
  color: &[PrimaryColor_4_text];;
}

/* Note: iPhone.css contains topBar class */
.header .ftSearch, .topBar .ftSearch { float: left; } /* mobile toolbar */

.fts {
  font-weight: normal;
  white-space: nowrap;
  vertical-align: middle;
  color: darkblue;
  padding: 0px;
  background: &[FTS];;
  height: 3em;
  border-top: solid #808080 1px;
  border-bottom: solid #808080 1px
}

.fts a { color: &[Label];; text-decoration: underline; }
.rl {
  white-space: nowrap;
  vertical-align: middle;
  color: darkblue;
  margin: 0px;
  padding: 0px;
}

.ftChk { width: 13px; height:13px; overflow:hidden; padding:0px; border:0px; margin:0px;margin-top:1px; vertical-align:middle;}

#system_tooltip { visibility:hidden; padding:0; position:absolute; z-index:10000; min-width: 220px; max-width: 500px; text-align: left; }
#tt_inner { background: &[PrimaryColor_4];; position: relative; }
#system_tooltip .content_td { border: solid &[PrimaryColor_1]; 1px; }
#system_tooltip #content { overflow: hidden; padding: 15px; color: &[PrimaryColor_4_text];; font-size: 14px; width: auto; }
.system_tooltip_css3 {
	box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3); 
  -webkit-box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3); 
  -moz-box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
  border-radius: 5px; 
  -webkit-border-radius: 5px; 
  -moz-border-radius: 5px;
  background: &[PrimaryColor_4];;
  border: solid &[PrimaryColor_1]; 1px;
}

.system_tooltip_css3 #tt_inner { background: transparent; }

.print {color:#000000;}
.printB {font-weight:bold; white-space: nowrap;}
.printBottom {	font: 90% arial, helvetica, sans-serif; color:#000000;}
.titleGrey {font-size:1.2em; font-weight:bold;color:grey}
.bigPrintTitle {font-size:28px; color:lightgrey;}
.printTitle {font-weight:bold; font-size:0.9em; background-color: &[PrimaryColor_1];; padding:3 3 3 3}
tr.printHeader {border:solid #808080 1px;  
    background-image: -moz-linear-gradient(top center, &[ToolbarColor];, &[PrimaryColor_1];); 
    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(&[ToolbarColor];), to(&[PrimaryColor_1];)); 
}

.invoice {border: 1px solid #808080;}

table.printFB {
  border-bottom: 1px solid #C0C9D7;
  border-left:   1px solid #C0C9D7;
  border-right:  1px solid #AFC4D5;
  border-top:    1px solid #AFC4D5;
  padding-left:4px;padding-right:3px;padding-top:2px;padding-bottom:2px;
}

/* captcha */
.captcha td { padding-left: 25px; }
.captcha table td { width: 51; height: 50; } /* puzzle td */
.captcha .a { background-position: 0% 0%; padding: 0; margin: 0;}
.captcha .b { background-position: 25% 0%; padding: 0; margin: 0;}
.captcha .c { background-position: 50% 0%; padding: 0; margin: 0;}
.captcha .d { background-position: 75% 0%; padding: 0; margin: 0;}
.captcha .e { background-position: 100% 0%; padding: 0; margin: 0;}

.captcha .f { background-position: 0% 100%; padding: 0; margin: 0;}
.captcha .g { background-position: 25% 100%; padding: 0; margin: 0;}
.captcha .h { background-position: 50% 100%; padding: 0; margin: 0;}
.captcha .i { background-position: 75% 100%; padding: 0; margin: 0;}
.captcha .j { background-position: 100% 100%; padding: 0; margin: 0;}

/*
.login {background-color: transparent; border-bottom: 1px solid #104A7B;border-right: 1px solid #104A7B;border-left: 1px solid #AFC4D5;border-bottom:1px solid #AFC4D5;border-top:1px solid #AFC4D5;color:#000066;height:19px;text-decoration:none; font-size:11px}
.lButton {background: #F0F2F6;border-bottom: 1px solid #104A7B;border-right: 1px solid #104A7B;border-left: 1px solid #AFC4D5;border-top:1px solid #AFC4D5;color:#000066;height:19px;text-decoration:none;cursor: pointer; font-size:11px}
*/
.userLogin {font-weight: bold; width: auto !important; max-width: 350px; color: &[SecondaryColorA_3];; border: 2px solid &[PrimaryColor_1];; padding: 10px;}
.userLogin .button { display: block; padding: 3px; margin-top: 4px; }
.userLogin a.button { height: 38px; }
.userLogin .rounded_rect_tbl td { border: none; padding: 1px 10px 8px; }
.userLogin #errorMessage { max-width: 320px; }
#loginForm td { font-weight: bold; }
.redeem { width: auto !important; width: 100px; background-color: #ffffff; color: #2B0764; border: 1px solid #cccccc; padding: 5 5 5 5; }

.rte { margin-bottom: 7px; background-color: &[PrimaryColor_4];; border: 2px solid &[PrimaryColor_1];; padding:0; width: 100%; height: 107px;  }
.rte_body { color: &[PrimaryColor_4_text];; font-family :Helvetica, arial; fontSize : 16px; margin:5; }
.rte_body object { display: block; background: #000000; }

/* like menu_Options in iphone.css */
#browser_dlg { z-index: 1000; top: 0px; position: absolute; width: 320px; padding: 0px; visibility: hidden; }
#browser_dlg table { width: 100%; }
/* ... */

